# winapilearn

./: .gitignore  CMakeLists.txt  ntdllfunc.h  utils.cpp
assembly/: syscallsstubs.std.x64.nasm
c_intro/: createprocess.c  msgbox.c  newprocess.c  openprocess.c
cpp_intro/: createprocess.cpp
cpp_process_injection/: DLLInjection.cpp  NTDLLInjection.cpp  shellcode_injection.cpp
include/: ntdllfunc.h  syscalls.c  syscalls.h  utils.cpp  utils.h
steps/c_intro/: createprocess.c  msgbox.c  newprocess.c  openprocess.c
steps/cpp_process_injection/: BasicDLL.cpp  DLLInjection.cpp  NTDLLInjection.cpp  direct_syscalls.cpp  shellcode_injection.cpp
